--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,11 +17,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   {% if title %}
-  <title>Django Blog - {% block title %}
+  <title>TheBloggers - {% block title %}
     {% endblock title %}
   </title>
   {% else %}
-  <title>Django Blog</title>
+  <title>TheBloggers</title>
   {% endif %}
   <link href="{% static 'css/media_query.css' %}" rel="stylesheet" type="text/css" />
   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
