--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-Register
+{% comment %} Register {% endcomment %}
 {% endblock%}
 {% block content %}
     <div class="content-section">
@@ -9,7 +9,7 @@ Register
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
-                {{ form|crispy }}
+                {{ form }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
